# MycoPermeNet-Backend

./: dev.sh  pyproject.toml
.github/workflows/: main_mycopermenet-api.yml  main_mycopermenet-backend.yml
src/: manage.py  requirements.txt  vercel.json
src/api/data/: all_descriptors.csv
src/api/ml_models/: __init__.py  mlp_optimal.pkl  mpnn_model_v2.pt  optimal_xgb_descriptors.model  target_inverted_model_v2.pt
src/api/schema/: atomic.py  molecular.py  similarity.py
src/atomic/: schema.py  utils.py
src/mycopermenet/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
