[project]
name = "mycopermenet-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chemprop>=2.1.2",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "graphene>=3.4.3",
    "graphene-django>=3.2.3",
    "openpyxl>=3.1.5",
    "rdkit>=2024.9.6",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "xgboost>=3.0.0",
]
